<resources>
    <string name="app_name"> </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="forgetPassword">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="write">Write: Using this option means everyone can use this tag to send messages.</string>
    <string name="safewrite">Safe Write: Locks the tag so that only you can use this.</string>
    <string name="erase">Erase: Wipe a tag to start again. If a tag uses safe write mode, the owner must erase with their own device.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_write_tag">WriteTagActivity</string>
    <string name="series_graph">Series Graph</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="sent_apom">Sent APOM\'s</string>
    <string name="rcvd_apom">Received APOM\'s</string>

</resources>
